--- a/TrainTimesTodayExtension/Base.lproj/MainInterface.storyboard
+++ b/TrainTimesTodayExtension/Base.lproj/MainInterface.storyboard
@@ -37,9 +37,9 @@
                         </subviews>
                         <constraints>
                             <constraint firstItem="ZOP-PP-jZ9" firstAttribute="centerX" secondItem="d7b-ux-gJX" secondAttribute="centerX" id="1Ta-J2-Xwn"/>
-                            <constraint firstItem="ZOP-PP-jZ9" firstAttribute="height" secondItem="d7b-ux-gJX" secondAttribute="height" id="W2P-Zw-U1f"/>
+                            <constraint firstItem="OhW-it-BPc" firstAttribute="top" secondItem="ZOP-PP-jZ9" secondAttribute="bottom" id="UWI-EK-umr"/>
                             <constraint firstItem="ZOP-PP-jZ9" firstAttribute="width" secondItem="d7b-ux-gJX" secondAttribute="width" id="ZSb-f1-Dbz"/>
-                            <constraint firstItem="OhW-it-BPc" firstAttribute="top" secondItem="ZOP-PP-jZ9" secondAttribute="bottom" id="zjC-SP-r4E"/>
+                            <constraint firstItem="ZOP-PP-jZ9" firstAttribute="top" secondItem="1PG-Y3-t8J" secondAttribute="bottom" id="tEa-5O-R3z"/>
                         </constraints>
                     </view>
                     <connections>
