--- a/TrainTrackerLI_MainAppStuff/Base.lproj/LaunchScreen.storyboard
+++ b/TrainTrackerLI_MainAppStuff/Base.lproj/LaunchScreen.storyboard
@@ -26,7 +26,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.02974798365" blue="0.21470703129999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="K5R-sx-cEs" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Gp3-X0-6Cc"/>
                             <constraint firstItem="K5R-sx-cEs" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Ib7-aW-V4v"/>
