finished blackwhite MVP with countdowns in app and extensions -- uploading second archive to itunes-connect for testflight testing

--- a/TrainTrackerLIWidget/Base.lproj/MainInterface.storyboard
+++ b/TrainTrackerLIWidget/Base.lproj/MainInterface.storyboard
@@ -19,7 +19,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="O2F-c0-ZkQ">
-                                <color key="backgroundColor" red="0.0" green="0.02974798365" blue="0.21470703129999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="delegate" destination="M4Y-Lb-cyx" id="vMS-OG-DTz"/>
+                                </connections>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iLq-Bn-vmY" userLabel="countdownView" customClass="CountdownView" customModule="TrainTrackerLIWidget" customModuleProvider="target">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
