--- a/SharedCode/TripsCell.xib
+++ b/SharedCode/TripsCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -14,7 +14,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="YRh-el-moF" id="5ko-Ko-xyg">
-                <frame key="frameInset" width="375" height="43.5"/>
+                <frame key="frameInset" width="375" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="departing" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W2n-gw-8oH">
@@ -32,7 +32,7 @@
                     <constraint firstItem="W2n-gw-8oH" firstAttribute="width" secondItem="5ko-Ko-xyg" secondAttribute="width" multiplier="0.3" id="Bmv-Uc-2sH"/>
                     <constraint firstItem="W2n-gw-8oH" firstAttribute="height" secondItem="5ko-Ko-xyg" secondAttribute="height" id="HVB-cA-hi8"/>
                     <constraint firstItem="W2n-gw-8oH" firstAttribute="leading" secondItem="5ko-Ko-xyg" secondAttribute="leadingMargin" constant="25" id="Hp4-3V-gIV"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="1UH-uk-jav" secondAttribute="trailing" constant="25" id="Jxb-4E-K5N"/>
+                    <constraint firstItem="1UH-uk-jav" firstAttribute="trailing" secondItem="5ko-Ko-xyg" secondAttribute="trailingMargin" constant="-25" id="Jxb-4E-K5N"/>
                     <constraint firstItem="1UH-uk-jav" firstAttribute="centerY" secondItem="5ko-Ko-xyg" secondAttribute="centerY" id="bXi-s4-KGl"/>
                     <constraint firstItem="1UH-uk-jav" firstAttribute="width" secondItem="5ko-Ko-xyg" secondAttribute="width" multiplier="0.3" id="mN1-Qb-Jc8"/>
                     <constraint firstItem="1UH-uk-jav" firstAttribute="height" secondItem="5ko-Ko-xyg" secondAttribute="height" id="pKV-wU-sEf"/>
